fixed spacing on cards

--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@
 
 .notification-card {
   background-color: #ffcccb;
-  margin:10px;
+  margin:5px;
   height: 70px;
   padding-left: 10px;
   border-radius:5px;
